@@ -1,3 +1,7 @@
+2007-02-02  Marc Singer  <elf@zealous.synapsedev.com>
+
+	* src/apex/command.c (TIMECMD_INIT): Added command execution timer.
+
 2007-01-31  Marc Singer  <elf@cerise.buici.com>
 
 	* debian/rules: Cross-building support.
